--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -6,6 +6,7 @@ lightEditor=0
 [Show]
 testButton=true
 hardwareUpdateButton=true
+softwareName=JKC810
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
