##修改文件架构

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -369,6 +369,8 @@
     <Compile Include="Utils\CSJThreadManager.cs" />
     <Compile Include="Utils\DataConvertUtils.cs" />
     <Compile Include="Utils\FileUtils.cs" />
+    <Compile Include="Utils\CPlayPoint.cs" />
+    <Compile Include="Utils\MPlayPoint.cs" />
     <EmbeddedResource Include="MyForm\GlobalSetForm.resx">
       <DependentUpon>GlobalSetForm.cs</DependentUpon>
     </EmbeddedResource>
