--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -206,6 +206,7 @@
     <Compile Include="MyForm\MultiStepPasteForm.Designer.cs">
       <DependentUpon>MultiStepPasteForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\NetworkUpdateReceiveCallBack.cs" />
     <Compile Include="MyForm\ProjectRenameOrCopyForm.cs">
       <SubType>Form</SubType>
     </Compile>
