--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -334,6 +334,9 @@
     <Compile Include="MyForm\YMSetForm.Designer.cs">
       <DependentUpon>YMSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PeripheralDevice\BaseCommunication.cs" />
+    <Compile Include="PeripheralDevice\NetworkConnect.cs" />
+    <Compile Include="PeripheralDevice\SerialConnect.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
