--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -8,7 +8,9 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="log4net" version="1.2.10" targetFramework="net40" />
   <package id="NHibernate" version="4.1.2.4000" targetFramework="net40" />
+  <package id="NPOI" version="2.4.1" targetFramework="net40" />
   <package id="NUnit" version="2.7.0" targetFramework="net40" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
   <package id="System.Data.SQLite" version="1.0.110.0" targetFramework="net40" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net40" />
   <package id="System.Data.SQLite.EF6" version="1.0.110.0" targetFramework="net40" />
