--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entity\ArtDMX.cs" />
     <Compile Include="Entity\Art_Net_Client.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
