--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Common\IPHelper.cs" />
     <Compile Include="Entity\ArtDMX.cs" />
     <Compile Include="Entity\Art_Net_Client.cs" />
+    <Compile Include="Entity\ControlDevice.cs" />
+    <Compile Include="Entity\LEDControllerServer.cs" />
     <Compile Include="MyForm\NetworkForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,7 +59,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Art_Net_Manager.cs" />
     <Compile Include="Utils\Constant.cs" />
+    <Compile Include="Utils\FileUtils.cs" />
+    <Compile Include="Utils\XiaosaTest.cs" />
     <EmbeddedResource Include="MyForm\NetworkForm.resx">
       <DependentUpon>NetworkForm.cs</DependentUpon>
     </EmbeddedResource>
