--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Entity\ControlDevice.cs" />
     <Compile Include="Entity\LEDControllerServer.cs" />
     <Compile Include="Entity\VirtualControlInfo.cs" />
+    <Compile Include="MyForm\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\NetworkForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,9 @@
     <Compile Include="Utils\Constant.cs" />
     <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="Utils\XiaosaTest.cs" />
+    <EmbeddedResource Include="MyForm\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm\NetworkForm.resx">
       <DependentUpon>NetworkForm.cs</DependentUpon>
     </EmbeddedResource>
