--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Art_Net_Manager.cs" />
+    <Compile Include="Utils\CalMD5Value.cs" />
     <Compile Include="Utils\Constant.cs" />
     <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="Utils\XiaosaTest.cs" />
